--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -397,7 +397,7 @@ Spatial abstractions are calculated by transformations of the quantitative geome
 
 
 \section{Spatial Reasoning in DSpace}
-In DSpace qualitative spatial reasoning serves has a link between the high level conceptual design space and the low level quantitative geometric space. It uses formal qualitative spatial calculi for topological (Region Connected Calculus \cite{Freksa}), orientational (Single Cross \cite{Freksa}, Oriented Point Relation Algebra \cite{Moratz}) and distance reasoning over the spatial entities of the strucutural and artefactual design. 
+In DSpace qualitative spatial reasoning serves has a link between the high level conceptual design space and the low level quantitative geometric space. It uses formal qualitative spatial calculi for topological (Region Connected Calculus \cite{Freksa}), orientational (Single Cross \cite{Freksa}, Oriented Point Relation Algebra \cite{Moratz}) and distance reasoning over the spatial entities of the structural and artefactual design (refer to figure \ref{reasoner-design}). 
 
 \begin{figure}[H]
 \centering
@@ -406,12 +406,12 @@ In DSpace qualitative spatial reasoning serves has a link between the high level
 \label{reasoner-design}
 \end{figure}
 
-Within the CLP framework of DSpace, the reasoning capabilities are built as a series of spatial constraint solvers using  Constraint Logic Programming over Reals (CLP($\mathbb{R}$)) and Constrain Handling Rules (CHR). The spatial contraint solvers are designed to work directly over the multiple perspective representation structure via the spatial abstraction layer. The main service of the reasoner is qualification of spatial design configurations into topological, orientational, and distance networks, which can be used to reason about conceptual design requirements.
+Within the CLP framework of DSpace, the reasoning capabilities are built as a series of spatial constraint solvers using CLP($\mathbb{R}$) (Constraint Logic Programming over Reals) and CHR (Constrain Handling Rules). The spatial constraint solvers work directly over the multiple perspective representation structure via the spatial abstraction layer. The main service of the reasoner is qualification of the quantitative architectural structures into topological, orientational, and distance relationships. These qualitative spatial relationships are, in turn, used to reason about conceptual design requirements.
 
 
 
 \subsection{Topology}
-The DSpace reasoner can qualify the following four topological relationships for convex hulls: inside (\ref{inside}), outside (\ref{outside}), partially overlapping (\ref{overlapping}), and disconnected (\ref{disconnected}). The process of topological qualification uses the geometric properties of convex hulls to detect topological relationships. 
+The DSpace reasoner can qualify the following four topological relationships for convex hulls: inside (\ref{inside}), outside (\ref{outside}), partially overlapping (\ref{overlapping}), and disconnected (\ref{disconnected}). The process of topological qualification uses geometric properties of convex hulls to detect topological relationships. 
 
 \begin{figure}[t]
  \centering
@@ -426,16 +426,16 @@ The DSpace reasoner can qualify the following four topological relationships for
 \label{topoloy}
 \end{figure}
 
-An object \emph{A} has an inside relationship with an object \emph{B} if all \emph{A}'s points are inside the convex hull of \emph{B}. The inside relationship is qualified in DSpace by using the property of convex hull / point containment. A point is inside a convex hull if the polarity of the determinate between the point and each line segment in the convex hull is negative. Because the points in a convex hull are always ordered counterclockwise, in the DSpace representation, the polarity of the determinant between a point inside the convex hull will always be negative. 
+An object \emph{A} has an inside relationship with an object \emph{B} if all \emph{A}'s points are inside the convex hull of \emph{B}. The inside relationship is qualified in DSpace by checking the property of convex hull / point containment. A point is inside a convex hull if the polarity of the determinate between the point and each line segment in the convex hull is negative. Because the points in a convex hull are always ordered counterclockwise, in the DSpace representation, the polarity of the determinant between a point inside the convex hull will always be negative. 
 
-An object \emph{B} has an outside relationship with an object \emph{B} if all \emph{B}'s points are inside the convex hull of \emph{A}. Because the outside relationship is the inverse of the inside relation it is easy to check for in DSpace be using the inside relationship. 
+An object \emph{A} has an outside relationship with an object \emph{B} if all \emph{B}'s points are inside the convex hull of \emph{A}. Because the outside relationship is the inverse of the inside relation it is easy to check for in DSpace be using the inside relationship ($inside(B,A)$). 
 
-An object \emph{A} has a partially overlapping relationship with an object \emph{B} if one or more line segments in \emph{A} intersect with one or more line segments in \emph{B}. The partially overlapping relationship is qualified in DSpace by checking for line segment intersection between objects. Two objects are partially overlapping if they intersect at at least one point.  
+An object \emph{A} has a partially overlapping relationship with an object \emph{B} if one or more line segments in \emph{A} intersect with one or more line segments in \emph{B}. The partially overlapping relationship is qualified in DSpace by checking for line segment intersection between objects. Two objects are partially overlapping if they intersect in at least one point.  
 
-An object \emph{A} has a disconnected relationship with an object \emph{B} if \emph{A} does not intersect with \emph{B}, there are no points in \emph{A} that are inside \emph{B}, and there are no points in \emph{B} that are inside \emph{A}. The disconnected relationship is qualified by checking for line segment intersection and convex hull / point containment. If there are no line segment intersections and no convex hull / point containment then two objects are disconnected.  
+An object \emph{A} has a disconnected relationship with an object \emph{B} if \emph{A} does not intersect with \emph{B}, there are no points in \emph{A} that are inside \emph{B}, and there are no points in \emph{B} that are inside \emph{A}. The disconnected relationship is qualified by checking for line segment intersection and convex hull / point containment. If there are no line segment intersections and no convex hull / point containment relationships, then two objects are disconnected.  
 
 \subsection{Orientation} \label{orientation}
-The DSpace reasoner can qualify two types of orientational relationships, intrinsic and extrinsic. Intrinsic orientational reasoning is based on the Oriented Point Relation Algebra (OPRA). OPRA partitions space into half planes, which are defined by lines emanating outwards from the reference point, and defines the qualitative orientational relationships by the half plane in which a second point is located. The granularity of an OPRA relationships is defined by the number of lines emanating from the point. 
+The DSpace reasoner can qualify two types of orientational relationships, intrinsic and extrinsic. Intrinsic orientational reasoning is based on the OPRA$_{m}$. OPRA$_{m}$ partitions space into half planes, which are defined by lines emanating outwards from the reference point, and defines the qualitative orientational relationships by the half plane in which a second point is located. The granularity of an OPRA$_{m}$ relationship defines the number of lines emanating from the reference point. 
 
 \begin{figure}[b]
 \centering
@@ -444,9 +444,9 @@ The DSpace reasoner can qualify two types of orientational relationships, intrin
 \label{facing-opra-base-rel}
 \end{figure}
 
-Figure \ref{facing-opra-base-rel} shows the OPRA$_{2}$ (two lines) partitioning of space, with labels for the base relationships. Point \emph{A} is located in sector 7 of point \emph{B}'s partitioned space, and \emph{B} is located in sector 1 of \emph{A}'s partitioned space. Note that the arrow depicts the point's direction and the half-plane sectors are labelled starting at the point's direction, incrementing counter-clockwise. 
+Figure \ref{facing-opra-base-rel} shows the OPRA$_{2}$ (two lines) partitioning of space, with labels for the base OPRA$_{2}$ relationships. Point \emph{A} is located in sector 7 of point \emph{B}'s partitioned space, and \emph{B} is located in sector 1 of \emph{A}'s partitioned space. Note that the arrow depicts the point's direction and the half-plane sectors are labelled starting at the point's direction, incrementing counter-clockwise. 
 
-OPRA relationships are qualified by solving linear inequalities that are defined by lines emanating from the origin. Given a point \emph{A} and \emph{B}, the $\theta_{AB}$ symbol stands for $ \tan^{-1} \frac{B_{y} - A_{y}}{B_{x} - A_{X}} $, the $\phi_{A}$ symbol refers to the direction of point \emph{A}, and the \emph{m} symbol refers to the granularity of the OPRA relations. Equation \ref{opra-eq} shows the linear inequalities for OPRA$_{M}$ relationships. Using this system of linear inequalities, the OPRA relationship can be solved for \emph{B} in terms of \emph{A} OPRA space.
+OPRA$_{m}$ relationships are qualified by solving linear inequalities that are defined by lines emanating from the reference point. Given a point \emph{A} and \emph{B}, the $\theta_{AB}$ symbol stands for $ \tan^{-1} \frac{B_{y} - A_{y}}{B_{x} - A_{X}} $, the $\phi_{A}$ symbol refers to the direction of point \emph{A}, and the \emph{m} symbol refers to the granularity of the OPRA$_{m}$ relations. Equation \ref{opra-eq} shows the linear inequalities for OPRA$_{m}$ relationships. Using this system of linear inequalities, the OPRA$_{2}$ relationship ($i$) can be solved for \emph{B} in terms of \emph{A} OPRA$){2}$ space.
 
 \begin{equation}\label{opra-eq}
 \begin{aligned}
@@ -455,7 +455,7 @@ OPRA relationships are qualified by solving linear inequalities that are defined
 \end{aligned}
 \end{equation}
 
-Extrinsic orientational reasoning is based on the Single Cross Calculus (SCC). SCC defines the orientation of a point C (referent) with respect to a point B (relatum) from the viewpoint of a point A (origin).
+Extrinsic orientational reasoning is based on the SCC. SCC defines the orientation of a point C (referent) with respect to a point B (relatum) from the viewpoint of a point A (origin).
 
 \begin{figure}[H]
 \centering
@@ -464,9 +464,9 @@ Extrinsic orientational reasoning is based on the Single Cross Calculus (SCC). S
 \label{scc}
 \end{figure}
 
-Figure \ref{scc} shows an SCC relationship between three points. The partitioning scheme is based on the orientation of the origin and relatum points. The third point, the referent, is located in sector 5 of the SCC partitioned space. 
+Figure \ref{scc} shows an SCC relationship between three points. The partitioning scheme is based on the orientation of the origin and relatum points. In this example, the third point, the referent, is located in sector 5 of the SCC partitioned space. 
 
-SCC relationships are qualified by solving a system of linear inequalities, which are based on the lines that partition space into the SCC sectors. Labeling starts at the line that runs between the origin and relatum at zero and increments clockwise. Given a point \emph{C}, its' SCC 1 relationship with points \emph{A} and \emph{B} is given by solving the equations for \emph{C} in \ref{scc-eq}.  
+SCC relationships are qualified by solving a system of linear inequalities, which are based on the lines that partition space into the SCC sectors. Labeling starts at the line that runs between the origin and relatum at zero and increments clockwise. Given a point \emph{C}, its' SCC$_{1}$ relationship with points \emph{A} and \emph{B} is given by solving the equations for \emph{C} in \ref{scc-eq}. There are similar systems of inequalities for each of the seven SCC relationships.  
 
 \begin{equation}\label{scc-eq}
 \begin{aligned}
@@ -488,7 +488,7 @@ The DSpace reasoner can calculate the minimum euclidean distance between points,
 \end{figure}
 
 \subsection{Spatial Reasoning in a CLP Framework}
-The spatial reasoning module is built as a set of spatial constraint solvers for topological, orientational, and distance reasoning. The solvers use CLP($\mathbb{R}$) and CHR to solve spatial qualification problems for topology and orientation and minimum distance constraints for distance. The distance constraint solver is different from topology and orientation because it does not solve qualification problems for distance, rather is solves minimum distance constraints against a pair of objects. The topological and distance constraint solvers extends work done in Sindalog spatial constraint solver \cite{}. 
+The spatial reasoning module is built as a set of spatial constraint solvers for topological, orientational, and distance reasoning. The solvers use CLP($\mathbb{R}$) and CHR to solve spatial qualification problems for topology and orientation and minimum distance constraints for distance. The distance constraint solver is different from topology and orientation because it does not qualify distance relationships, rather is solves minimum distance constraints against a pair of objects. The topological and distance constraint solvers extends work done in The Sindalog spatial constraint solver \cite{}. 
 
 In the CLP framework of DSpace, the spatial constraint solvers work directly over the multiple perspective design structure so that the constraint solvers know directly about the semantics of architectural entities. For example, to solve a topological constraint (for example inside) for two doorways (\emph{door1, door2}) simply requires the ids for each architectural entity. 
 \begin{verbatim}
@@ -498,10 +498,10 @@ A query such as this will return \emph{true} if the two entities have an inside 
 
 TODO: figure of the design of spatial reasoner
 
-The remainder of this section will look at the structure and implementation of each constraint solver and how each solver can be used to solver spatial qualification and distance constraints.
+The remainder of this section looks at the structure and implementation of each constraint solver and how each can be used to solve spatial constraints.
 
 \subsubsection{Constraint Solver: Topology}
-The topological constraint solver qualifies topological relationships over convex hull objects. The solver is written using CHRs that simplify and propagate topological constraints into simpler constraints of line segment intersection and convex hull / point containment. Once a constraint is in a simplified form it is solved and returns true or false based on the outcome of the solution.   
+The topological constraint solver qualifies topological relationships over convex hull objects. The solver is written using CHRs that simplify and propagate topological constraints into geometric constraints of line segment intersection and convex hull / point containment. Once a constraint is in a simplified form, i.e., a line intersection of point containment constraint, it is solved and returns true or false based on the outcome of the solution.   
 
 For example, qualification for the partially overlapping topological relationship requires simplifying the overlapping constraint into line segment intersection constraints between the line segments of the convex hulls. The overlapping constraint is solved when at least one line intersection constraint is solved to true or when there are no more line intersection constraints left in the constraint store. In the former case the constraint returns true and in the latter case returns a failure. 
 
@@ -515,9 +515,9 @@ The top level constraints recursively break down each convex hull into line segm
 
 
 \subsubsection{Constraint Solver: Orientation}
-The orientational solver qualifies intrinsic and extrinsic orientational relationships over points and directed points. The solvers is written using CLP($\mathbb{R}$) and constrains linear inequalities to solve orientational qualification problems. Within the orientational solver there are two modules, one for intrinsic relationships based on OPRA and one for extrinsic relationships based on SCC.
+The orientational constraint solver qualifies intrinsic and extrinsic orientational relationships over points and directed points. It is written in CLP($\mathbb{R}$) and constrains linear inequalities to solve orientational qualification problems. Within the orientational solver there are two modules, one for intrinsic relationships based on OPRA$_{m}$ and one for extrinsic relationships based on SCC.
 
-The OPRA constraint solver solves OPRA constrains by solving a system of linear inequalities. The discussion of these equations can be found in \ref{orientation}. In CLP($\mathbb{R}$) the linear inequalities are built as constraints that are stored in the solvers constraint store until it is able to solve them. 
+The OPRA$_{m}$ constraint solver solves OPRA$_{m}$ constrains by solving a system of linear inequalities. The discussion of these equations can be found in \ref{orientation}. In CLP($\mathbb{R}$) the linear inequalities are built as constraints that are stored in the solvers constraint store until it is able to solve them. 
 
 The SCC constraint solver solves SCC constrains by solving a system of linear inequalities. The process of solving these constraints is very similar to the OPRA constraints.
 
